--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <version>LATEST</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
 
 
     </dependencies>
